--- a/src/sass/components/_refereeDescription.sass
+++ b/src/sass/components/_refereeDescription.sass
@@ -6,7 +6,7 @@
         width: 300px
         @include articles
         padding: 5px
-        margin-bottom: 20px
+        margin: 0 10px 20px 10px
 
         &__title
             position: relative
@@ -60,7 +60,7 @@
     .accordion-referee
         @include flex(row, center, normal)
         flex-wrap: wrap
-        max-width: 90%
+        max-width: 88%
         margin: auto
         margin-top: 30px
 
@@ -69,13 +69,6 @@
 
             &__title, &__content
                 font-size: $fs-16
-
-@media screen and (min-width: 911px)
-    .accordion-referee
-        gap: 20px
-
-        &__item
-            margin-bottom: 0
 
 @media screen and (min-width: 1024px)
 .accordion-referee
