--- a/src/sass/components/_refereeModal.sass
+++ b/src/sass/components/_refereeModal.sass
@@ -7,7 +7,7 @@
 .modalReferee
     display: none
 
-@media screen and (min-width: 911px)
+@media screen and (min-width: 955px)
     .modalRefereeBack
         opacity: 1
         position: fixed
